...
    {
      'name': 'Fruits',
      'icon': 'apple',
      'color': '#7ED321',
    },
    {
      'name': 'Vegetables',
      'icon': 'eco',
      'color': '#50E3C2',
    },
    {
      'name': 'Snacks',
      'icon': 'fastfood',
...
